# Rustcbeer

./: README.md
server/: !vmt.md  LICENSE  run.sh
server/live/: Cargo.toml  makefile
server/live/src/: main.rs
server/live/static/: index.html  style.css
